; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_twsi.c_i2c_ackrcv.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_twsi.c_i2c_ackrcv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qib_devdata = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qib_devdata*)* @i2c_ackrcv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2c_ackrcv(%struct.qib_devdata* %0) #0 {
  %2 = alloca %struct.qib_devdata*, align 8
  %3 = alloca i32, align 4
  store %struct.qib_devdata* %0, %struct.qib_devdata** %2, align 8
  %4 = load %struct.qib_devdata*, %struct.qib_devdata** %2, align 8
  %5 = call i64 @sda_in(%struct.qib_devdata* %4, i32 1)
  %6 = trunc i64 %5 to i32
  store i32 %6, i32* %3, align 4
  %7 = load %struct.qib_devdata*, %struct.qib_devdata** %2, align 8
  %8 = call i32 @scl_out(%struct.qib_devdata* %7, i32 1)
  %9 = load %struct.qib_devdata*, %struct.qib_devdata** %2, align 8
  %10 = call i64 @sda_in(%struct.qib_devdata* %9, i32 1)
  %11 = icmp eq i64 %10, 0
  %12 = zext i1 %11 to i32
  store i32 %12, i32* %3, align 4
  %13 = load %struct.qib_devdata*, %struct.qib_devdata** %2, align 8
  %14 = call i32 @scl_out(%struct.qib_devdata* %13, i32 0)
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i64 @sda_in(%struct.qib_devdata*, i32) #1

declare dso_local i32 @scl_out(%struct.qib_devdata*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
